// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/BillsAndPayment/BillsAndPaymentManagement/BillingReminder/Create/elements/StepperForm/index render 1`] = `
<React.Fragment>
  <Box
    style={
      Object {
        "display": "flex",
        "justifyContent": "center",
        "margin": "30px 0",
        "paddingBottom": 2,
      }
    }
  >
    <Stepper
      accessibleTab={-1}
      active={0}
      errors={null}
      errorsLabel=""
      onStepClick={[MockFunction]}
      steps={
        Array [
          "Pick Invoice",
          "Email Text & Attachment",
          "Approval Data",
        ]
      }
      variant="number"
      warnings=""
    />
  </Box>
</React.Fragment>
`;

exports[`src/containers/BillsAndPayment/BillsAndPaymentManagement/BillingReminder/Create/elements/StepperForm/index render attachment 1`] = `
<React.Fragment>
  <Box
    style={
      Object {
        "display": "flex",
        "justifyContent": "center",
        "margin": "30px 0",
        "paddingBottom": 2,
      }
    }
  >
    <Stepper
      accessibleTab={2}
      active={0}
      errors={null}
      errorsLabel=""
      onStepClick={[MockFunction]}
      steps={
        Array [
          "Pick Invoice",
          "Email Text & Attachment",
          "Approval Data",
        ]
      }
      variant="number"
      warnings=""
    />
  </Box>
</React.Fragment>
`;

exports[`src/containers/BillsAndPayment/BillsAndPaymentManagement/BillingReminder/Create/elements/StepperForm/index render carbonCopy 1`] = `
<React.Fragment>
  <Box
    style={
      Object {
        "display": "flex",
        "justifyContent": "center",
        "margin": "30px 0",
        "paddingBottom": 2,
      }
    }
  >
    <Stepper
      accessibleTab={3}
      active={0}
      errors={null}
      errorsLabel=""
      onStepClick={[MockFunction]}
      steps={
        Array [
          "Pick Invoice",
          "Email Text & Attachment",
          "Approval Data",
        ]
      }
      variant="number"
      warnings=""
    />
  </Box>
</React.Fragment>
`;

exports[`src/containers/BillsAndPayment/BillsAndPaymentManagement/BillingReminder/Create/elements/StepperForm/index render data null 1`] = `
<React.Fragment>
  <Box
    style={
      Object {
        "display": "flex",
        "justifyContent": "center",
        "margin": "30px 0",
        "paddingBottom": 2,
      }
    }
  >
    <Stepper
      accessibleTab={-1}
      active={0}
      errors={null}
      errorsLabel=""
      onStepClick={[MockFunction]}
      steps={
        Array [
          "Pick Invoice",
          "Email Text & Attachment",
          "Approval Data",
        ]
      }
      variant="number"
      warnings=""
    />
  </Box>
</React.Fragment>
`;

exports[`src/containers/BillsAndPayment/BillsAndPaymentManagement/BillingReminder/Create/elements/StepperForm/index render fileTemplate 1`] = `
<React.Fragment>
  <Box
    style={
      Object {
        "display": "flex",
        "justifyContent": "center",
        "margin": "30px 0",
        "paddingBottom": 2,
      }
    }
  >
    <Stepper
      accessibleTab={2}
      active={0}
      errors={null}
      errorsLabel=""
      onStepClick={[MockFunction]}
      steps={
        Array [
          "Pick Invoice",
          "Email Text & Attachment",
          "Approval Data",
        ]
      }
      variant="number"
      warnings=""
    />
  </Box>
</React.Fragment>
`;

exports[`src/containers/BillsAndPayment/BillsAndPaymentManagement/BillingReminder/Create/elements/StepperForm/index render invoices 1`] = `
<React.Fragment>
  <Box
    style={
      Object {
        "display": "flex",
        "justifyContent": "center",
        "margin": "30px 0",
        "paddingBottom": 2,
      }
    }
  >
    <Stepper
      accessibleTab={1}
      active={0}
      errors={null}
      errorsLabel=""
      onStepClick={[MockFunction]}
      steps={
        Array [
          "Pick Invoice",
          "Email Text & Attachment",
          "Approval Data",
        ]
      }
      variant="number"
      warnings=""
    />
  </Box>
</React.Fragment>
`;

exports[`src/containers/BillsAndPayment/BillsAndPaymentManagement/BillingReminder/Create/elements/StepperForm/index render reviewer 1`] = `
<React.Fragment>
  <Box
    style={
      Object {
        "display": "flex",
        "justifyContent": "center",
        "margin": "30px 0",
        "paddingBottom": 2,
      }
    }
  >
    <Stepper
      accessibleTab={2}
      active={0}
      errors={null}
      errorsLabel=""
      onStepClick={[MockFunction]}
      steps={
        Array [
          "Pick Invoice",
          "Email Text & Attachment",
          "Approval Data",
        ]
      }
      variant="number"
      warnings=""
    />
  </Box>
</React.Fragment>
`;
